Implementado o componente Header da aplicação

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,19 @@
-// TODO
+//TODO
+.headerContainer {
+  width: 1120px;
+  height: 6.5rem;
+  margin: 0 auto;
+  border: 1px solid blue;
+}
+
+.headerContent {
+  width: 720px;
+  height: 6.5rem;
+  margin: 0 auto;
+  padding: 0 10px;
+  
+  display: flex;
+  align-items: center;
+  
+  border: 1px solid red;
+}
