--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,5 +3,44 @@
   margin: 0;
   padding: 0;
 }
+//TODO
 
-// TODO
+:root {
+  --Background: #1A1D23;
+  --Highlight: #FF57B2;
+  --Heading: #F8F8F8;
+  --Info: #BBBBBB;
+  --Body: #D7D7D7;  
+}
+
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;    //15px
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;   //14px
+  }
+}
+
+body {
+  background: var(--Background);
+  color: var(--Body);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
