--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -34,37 +34,11 @@
     margin-top: 8px;
     color: var(--Body);
     font-size: 1.125rem;            // 18px
-    font-weight: regular;
+    font-weight: 400;
   }
 
   & + section {
     margin-top: 48px;
   }
   
-  .info {
-    margin-top: 24px;
-    display: flex;
-    
-    div {
-      margin-right: 26px;
-      display: flex;
-      align-items: center;
-      
-      svg {
-        margin-right: 8px;
-        width: 1.25rem;                // 20px
-        height: 1.25rem;
-        color: var(--Info);
-      }
-      
-      time, span {
-        font-size: 0.875rem;          // 14px
-        font-weight: regular;         // 400
-        color: var(--Info);
-      }
-      
-    }
-    
-  }
-
 }
