--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,33 @@
-// TODO
+
+.container {
+  width: 720px;
+  margin: 0 auto;
+}
+
+
+
+.info {
+  margin-top: 24px;
+  display: flex;
+  
+  div {
+    margin-right: 26px;
+    display: flex;
+    align-items: center;
+    
+    svg {
+      margin-right: 8px;
+      width: 1.25rem;                // 20px
+      height: 1.25rem;
+      color: var(--Info);
+    }
+    
+    time, span {
+      font-size: 0.875rem;          // 14px
+      font-weight: regular;         // 400
+      color: var(--Info);
+    }
+    
+  }
+  
+}
