--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,11 +1,11 @@
 .homeHeaderContainer {
-  margin: 20px auto 20px;
+  margin: 20px auto 0;
 }
 
 .homeContainer {
   max-width: 45rem;             // 720px
-  margin: 0 auto 70px;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 0 10px 70px;
 
   button {
     margin: 64px 0 0;
